RbA Build/src/objects/Quote_Financing__c.object
<CustomObject>
    <description>Junction object to Finance Program to the Quote object.</description>
    <fields>
        <fullName>Amount_Financed__c</fullName>
        <label>Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authorization_Code__c</fullName>
        <label>Authorization Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Display__c</fullName>
        <defaultValue>0</defaultValue>
        <description>field to capture a dispaly amount for rSuite</description>
        <inlineHelpText>field to capture a dispaly amount for rSuite</inlineHelpText>
        <label>Payment Display</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pivotal_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Pivotal Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program_Fee__c</fullName>
        <description>The program fee (percentage) times the amount financed.</description>
        <inlineHelpText>The program fee (percentage) times the amount financed.</inlineHelpText>
        <label>Program Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Rate__c</fullName>
        <label>Program Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Related_Quote__c</fullName>
        <label>Related Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Financing</relationshipLabel>
        <relationshipName>Quote_Financing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Store_Finance_Program__c</fullName>
        <label>Store Finance Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Store_Finance_Program__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Store_Finance_Program__c</referenceTo>
        <relationshipLabel>Quote Financing</relationshipLabel>
        <relationshipName>Quote_Financing_del</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rSuite_Id__c</fullName>
        <description>an identifier used by rSuite to help them manage jobs in the mobile apps - meets RFC 4122 version 4</description>
        <externalId>true</externalId>
        <inlineHelpText>an identifier used by rSuite to help them manage jobs in the mobile apps</inlineHelpText>
        <label>rSuite Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Quote Financing</label>
    <nameField>
        <displayFormat>QuoteFinancing-{00}</displayFormat>
        <label>Quote Financing Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Financing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>